--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "svgr": "svgr --icon --typescript --no-prettier --out-dir src/assets/svgComponents public/common --ignore-existing"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@tanstack/react-query": "^5.90.2",
+    "clsx": "^2.1.1",
     "eslint-plugin-prettier": "^5.5.4",
     "framer-motion": "^12.23.22",
     "next": "15.5.4",
