--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-query": "^3.39.3",
     "tailwind-merge": "^3.3.1",
     "typescript-eslint": "^8.45.0",
     "zustand": "^5.0.8"
