--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.23.22",
     "js-cookie": "^3.0.5",
     "next": "15.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-query": "^3.39.3",
