--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "svgr": "svgr --icon --typescript --no-prettier --out-dir src/assets/svgComponents public/common --ignore-existing"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@tanstack/react-query": "^5.90.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-prettier": "^5.5.4",
     "framer-motion": "^12.23.22",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.548.0",
     "next": "15.5.4",
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
@@ -23,6 +26,7 @@
     "react-query": "^3.39.3",
     "tailwind-merge": "^3.3.1",
     "typescript-eslint": "^8.45.0",
+    "vaul": "^1.1.2",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -38,6 +42,7 @@
     "eslint-config-next": "15.5.4",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
